--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <input class="stepcount" type="text" id="username" name="username" size="25" onchange="setusername()" required >
         </p>
         <p>
-            <input class="btn btn-lg btn-primary" id="loginbtn" type="button" onclick="userlogin()" value="Send Text Message">
+            <input class="btn btn-lg btn-primary" id="loginbtn" type="button" onclick="userlogin()" value="Text One-Time Password ">
         </p>
         <p>
-            <label class="stepcount" for="password">OTP (One-time Password)</span></label><br>
+            <label class="stepcount" for="password">OTP (One-Time Password)</span></label><br>
             <input class="stepcount" type="password" id="password" name="pwd" size="25" onchange="setuserpassword()" required >
         </p>
         <p>
